--- a/pom.xml
+++ b/pom.xml
@@ -50,5 +50,18 @@
 	
 	<build>
 		<finalName>springmvcexample</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>tomcat-maven-plugin</artifactId>
+				<configuration>
+					<url>http://127.0.0.1:8080/manager/html</url>
+					<server>TomcatServer</server>
+					<path>/hung</path>
+
+				</configuration>
+			</plugin>
+
+		</plugins>
 	</build>
 </project>
