--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>tomcat-maven-plugin</artifactId>
 				<configuration>
-					<url>http://127.0.0.1:8080/manager/html</url>
+					<url>http://127.0.0.1:8080/manager/text</url>
 					<server>TomcatServer</server>
 					<path>/hung</path>
 
